Fixed some layout issues.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -69,9 +69,10 @@ ul.HeaderIcons {
   padding: 0;
   margin: 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   height: 4rem;
+  width: 100%;
 }
 
 header nav .icon {
